Style it for mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,21 @@
 @charset "utf-8";
 /* CSS Document */
 
+* {
+  box-sizing: border-box;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 1rem;
 	color: #333;
 	line-height: 1.5;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
-}
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
-	color: #333;
 }
 a {
 	color: orange;
@@ -29,12 +29,12 @@ a img{
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -42,36 +42,42 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #footer {
   background-color: #444;
   color: #aaa;
-  font-size: 8pt;
+  font-size: 0.7rem;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 1rem;
   text-align: center;
   text-transform: uppercase;
 }
+
+
 /* ====================== Navigation ====================== */
 nav {
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 100%;
-  height: 80px;
   background-color: #252831;
-  text-align:center;
 }
 nav h1 {
   margin: auto;
+  text-align: center;
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 1rem;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.6rem;
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 10px 40px 16px;
+    padding: 0.7rem 2rem 1rem;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 1rem;
     margin: 0;
-    width: calc(50% - 80px);
+    width: 100%;
 }
 
 /* Display list items side by side */
@@ -81,7 +87,7 @@ nav h1 a {
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-    padding: 8px;
+    padding: 0.5rem;
     color: black;
     content: "/\00a0";
 }
@@ -99,16 +105,22 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 60vh;
   width: 100%;
   background-color: #ccc;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 4rem;
   background-color: #3397DB;
+
+  display: flex;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
+
+  text-align: center;
 }
 .filter-options h2 {
   color: white;
@@ -116,17 +128,18 @@ nav h1 a {
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+
+  width: 100%;
 }
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial,sans-serif;
-  font-size: 11pt;
-  height: 35px;
+  font-size: 0.9rem;
+  height: 2rem;
   letter-spacing: 0;
-  margin: 10px;
-  padding: 0 10px;
-  width: 200px;
+  padding: 0 0.6rem;
+  width: 40%;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -141,11 +154,10 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 1rem;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 1rem 1.5rem;
   text-align: left;
-  width: 270px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -158,25 +170,25 @@ nav h1 a {
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 14pt;
+  font-size: 1.2rem;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 1.5rem 0 0.5rem;
   text-transform: uppercase;
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  font-size: 1rem;
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  font-size: 1rem;
+  margin: 1rem 0 0;
+  padding: 0.5rem 2rem 0.5rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -189,13 +201,12 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+.inside #maincontent {
+  margin-top: 8rem;
+}
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 40vh;
 }
 .inside #map {
   background-color: #ccc;
@@ -207,44 +218,54 @@ nav h1 a {
   position: absolute;
   width: 50%;
 }
+#restaurant-container, #reviews-container {
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #fff;
+  width: 100%;
+  /*padding: 0 1rem;*/
+}
+
+#restaurant-name,
+#restaurant-img,
+#restaurant-cuisine,
+#restaurant-address,
+#restaurant-hours,
+#reviews-container h2,
+#reviews-list {
+  display: block;
+  width: 90%;
+  margin: 1rem auto;
+}
+
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 1.5rem;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
-	width: 90%;
+
+#restaurant-img,
+#reviews-list li {
+	border-radius: 1rem 0;
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  font-size: 1rem;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1rem;
   font-weight: 300;
-  letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
+  letter-spacing: 0.5rem;
+  padding: 0.3rem 0;
   text-align: center;
   text-transform: uppercase;
 	width: 90%;
 }
-#restaurant-container, #reviews-container {
-  border-bottom: 1px solid #d9d9d9;
-  border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
-}
-#reviews-container {
-  padding: 30px 40px 80px;
-}
+
 #reviews-container h2 {
   color: #f58500;
   font-size: 24pt;
@@ -253,19 +274,22 @@ nav h1 a {
   padding-bottom: 1pt;
 }
 #reviews-list {
-  margin: 0;
   padding: 0;
 }
+
+.review h3 {
+  background-color: #252831;
+  color: #fff;
+}
+
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  margin-top: 1rem;
 }
 #reviews-list li p {
   margin: 0 0 10px;
