--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,11 @@ nav h1 a {
   letter-spacing: 0.6rem;
   text-transform: uppercase;
 }
+
+nav.breadcrumb {
+  height: auto;
+}
+
 #breadcrumb {
     padding: 0.7rem 2rem 1rem;
     list-style: none;
