--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,35 @@ a:hover, a:focus {
 a img{
 	border: none 0px #fff;
 }
+
+
+a.skip-main {
+    left:-999px;
+    position:absolute;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+    z-index:-999;
+}
+a.skip-main:focus, a.skip-main:active {
+    color: #fff;
+    background-color:#000;
+    left: auto;
+    top: auto;
+    width: 30%;
+    height: auto;
+    overflow:auto;
+    margin: 10px 35%;
+    padding:5px;
+    border-radius: 15px;
+    border:4px solid yellow;
+    text-align:center;
+    font-size:1.2em;
+    z-index:999;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 1.20rem;
 }
